2010-10-06  Asa Ayers  <Asa.Ayers@Gmail.com>

- Ticket 46 - Added DataStore_Characters to the list of dependencies. It should have been added with Ticket 43.

2010-10-02  Asa Ayers  <Asa.Ayers@Gmail.com>

- I removed the persistent queue (Ticket 33) It caused to many bugs and was blocking me from getting other things done. I think its something that will get implemented again once I figure out the best way to do it.
- Ticket 43 - Updated the way ItemAuditor counts how many of each item you own to only count your current faction.
- Ticket 42 - In order to fix an issue with having multiple items that are the same base item with different enchants, all costs are now tracked against the base item instead of the exact item.
- Fixed an issue with /ia invested that caused all items to display twice. This was introduced by the fix in Ticket 42.

2010-09-15  Asa Ayers  <Asa.Ayers@Gmail.com>

- Ticket 41 - Fixed a bug that occured if you created items without ever opening /ia crafting.
- Ticket 40 - Added options to enable counting guild bank inventory.

2010-09-03  Asa Ayers  <Asa.Ayers@Gmail.com>

- Re-enabled IA QuickAuctions decider. I unintentionally disabled it when working on the QAManager code.
- Ticket 39 - Updated the ItemAuditor window to be pulled to the front when it opens.

2010-09-02  Asa Ayers  <Asa.Ayers@Gmail.com>

- Updated the ArkInventory rule and tooltip to work in QA is compatible instead of if its enabled in ItemAuditor.
- Moved the check for QAManager so it doesn't interfere with the tooltip or ArkInventory rule.
- Update GetItemCost to return the total invested even if you have none of that item left. If you sell all of an item but are waiting for the mail to arrive, you can still see how much you have invested even though you don't actually own any more of that item.
- Changed Total Profit to Profit Each to match the rest of the interface. Cost and Estimated Sale are both Each.