@@ -8,7 +8,10 @@
 	<Include file="Libs\AceDbOptions-3.0\AceDbOptions-3.0.xml"/>   
 	<Include file="Libs\AceConfig-3.0\AceConfig-3.0.xml"/>   
 	<Include file="Libs\AceBucket-3.0\AceBucket-3.0.xml"/>   
-	<Include file="Libs\AceTimer-3.0\AceTimer-3.0.xml"/>   
+	<Include file="Libs\AceTimer-3.0\AceTimer-3.0.xml"/>
+	<Include file="Libs\AceSerializer-3.0\AceSerializer-3.0.xml"/>
+	<Include file="Libs\AceTimer-3.0\AceTimer-3.0.xml"/>
+
 	<Include file="Libs\lib-st\lib-st.xml"/>
 	<Script file="Libs\LibPeriodicTable-3.1\LibPeriodicTable-3.1.lua"/>
 </Ui>
